<resources>
    <string name="app_name">BambamApp</string>
    <string name="bambam_titulo">BAMBAM</string>
    <string name="academy">academy</string>
    <string name="cadastro">CADASTRO</string>
    <string name="name">Nome </string>
    <string name="cellphone">Celular </string>
    <string name="gender">Sexo </string>
    <string name="famele">Feminino</string>
    <string name="male">Masculino</string>
    <string name="exercise">Exercício</string>
    <string name="day_of_exercises">Dias de treino</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>
    <string name="clear">Limpar</string>
    <string name="next">Boraaaaaa</string>
    <string name="gym">Academia</string>
    <string name="treino">Treino</string>
    <string name="joao_silva">João Silva</string>
    <string name="no_select_gender">Nenhum sexo foi selecionado</string>
    <string name="no_select_option">Nenhum opção foi selecionado</string>
    <string name="cell_number">(XX) 9XXXX-XXXX</string>
    <string name="clear_message">Itens limpos</string>
    <string name="name_clean">Nome em branco</string>
    <string name="cell_clean">Telefone em branco</string>
    <string name="gender_clean">Escolha um sexo</string>
    <string name="checkbox_clean">Escolha pelo menos um dia para treinar</string>
    <string name="days_checked">Dias de treinos: </string>
    <string name="training_spinner">Atividades </string>
    <string name="select_training">Escolha uma atividade</string>
    <string name="pec_deck">Pec Deck</string>
    <string name="push_up">Push-up</string>
    <string name="barbell_bench_press">Barbell Bench Press</string>
    <string name="incline_barbell_bench_press">Incline Barbell Bench Press</string>
    <string name="standing_cable_crossover">Standing Cable Crossove</string>
    <string name="flat_bench_dumbbell_fly">Flat Bench Dumbbell Fly</string>
    <string name="cadastrar_aluno">Cadastrar aluno</string>
    <string name="about">Sobre</string>
    <string name="autor_name_jean">Jean Marcel Peres Martins</string>
    <string name="autor_email_jean">martinsj@alunos.utfpr.edu.br</string>
    <string name="autor_curso_jean">Engenharia de Computação</string>
    <string name="about_app">Um aplicativo para gerenciar treinos de alunos.</string>
    <string-array name="exercicios">
        <item>@string/pec_deck</item>
        <item>@string/push_up</item>
        <item>@string/barbell_bench_press</item>
        <item>@string/incline_barbell_bench_press</item>
        <item>@string/standing_cable_crossover</item>
        <item>@string/flat_bench_dumbbell_fly</item>
    </string-array>
    <string-array name="training_array">
        <item>Atividades</item>
        <item>Musculação</item>
        <item>Crossfit</item>
        <item>Zumba</item>
    </string-array>
</resources>