<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:onClick="saveItems"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textGender"
            app:layout_constraintTop_toBottomOf="@+id/textGender">

            <RadioButton
                android:id="@+id/radioButtonFamale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/famele" />

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:id="@+id/bambam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="189dp"
            android:text="@string/bambam_titulo"
            android:textSize="44sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/gym"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/bambam_title"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="@+id/bambam_title"
            app:layout_constraintTop_toTopOf="@+id/bambam_title" />

        <TextView
            android:id="@+id/textCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="48dp"
            android:text="@string/cadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textGym" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/textCadastro"
            app:layout_constraintTop_toBottomOf="@+id/textCadastro" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/joao_silva"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/textName"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <TextView
            android:id="@+id/textCell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cellphone"
            app:layout_constraintStart_toStartOf="@+id/inputName"
            app:layout_constraintTop_toBottomOf="@+id/inputName" />

        <EditText
            android:id="@+id/inputCell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cell_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/textCell"
            app:layout_constraintTop_toBottomOf="@+id/textCell" />

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="@+id/inputCell"
            app:layout_constraintTop_toBottomOf="@+id/inputCell" />

        <Spinner
            android:id="@+id/training_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/treino"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/inputCell"
            app:layout_constraintStart_toStartOf="@+id/inputCell"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

        <TextView
            android:id="@+id/textDayOfTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/day_of_exercises"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/training_spinner"
            app:layout_constraintStart_toStartOf="@+id/training_spinner"
            app:layout_constraintTop_toBottomOf="@+id/training_spinner" />

        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/monday"
            app:layout_constraintStart_toStartOf="@+id/training_spinner"
            app:layout_constraintTop_toBottomOf="@+id/textDayOfTraining" />

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/thursday"
            app:layout_constraintStart_toEndOf="@+id/checkBoxMonday"
            app:layout_constraintTop_toTopOf="@+id/checkBoxMonday" />

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tuesday"
            app:layout_constraintStart_toStartOf="@+id/checkBoxMonday"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMonday" />

        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/friday"
            app:layout_constraintStart_toStartOf="@+id/checkBoxThursday"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMonday" />

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wednesday"
            app:layout_constraintStart_toStartOf="@+id/checkBoxTuesday"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTuesday" />

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/saturday"
            app:layout_constraintStart_toStartOf="@+id/checkBoxFriday"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTuesday" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="clearAllItems"
            android:text="@string/clear"
            app:layout_constraintStart_toStartOf="@+id/checkBoxWednesday"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxWednesday" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveItems"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxThursday"
            app:layout_constraintTop_toTopOf="@+id/buttonClear" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>